examples/test/testpolicy3117.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3117
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key9: value16
      key13: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value41
          key35: value9
      podSelector:
        matchLabels:
          key37: value36
